@@ -1,6 +1,7 @@
 Changes in version 1.4.1 (??? 2008)
 
- - Fixed clipping of menu and toolbar GUI elements, reported by greenya
+ - Fixed clipping of menu, toolbar and combo box GUI elements, reported by greenya
+   - setNotClipped now applies all the way up to the root of the GUI environment, rather than just to the next parent 
 
  - Made new scene managers use the original manager's GUIEnvironment, reported by MasterGod
 
